# skip-thoughts

./: README.md  setup.cfg  setup.py
src/skip_thoughts/: encoder_manager.py  evaluate.py  skip_thoughts_encoder.py  skip_thoughts_model.py  skip_thoughts_model_test.py  track_perplexity.py  train.py  vocabulary_expansion.py
src/skip_thoughts/data/: preprocess_dataset.py
src/skip_thoughts/ops/: gru_cell.py  input_ops.py
