##########################
# Setup.py Configuration #
##########################
[metadata]
name = skip_thoughts
version = 0.0.1-dev
long_description = file: README.md
long_description_content_type = text/markdown

# URLs associated with the project
url = https://github.com/helena-balabin/skip-thoughts
download_url = https://github.com/helena-balabin/skip-thoughts
project_urls =
    Bug Tracker = https://github.com/helena-balabin/skip-thoughts/issues
    Source Code = https://github.com/helena-balabin/skip-thoughts

# License Information
license = MIT
license_file = LICENSE

[options]
# Random options
zip_safe = false
include_package_data = True

# Where is my code
packages = find:
package_dir =
    = skip_thoughts

[options.packages.find]
where = skip_thoughts

######################
# Doc8 Configuration #
# (doc8.ini)         #
######################
[doc8]
max-line-length = 120

##########################
# Coverage Configuration #
# (.coveragerc)          #
##########################
[coverage:run]
branch = True
source = sentencefmricomparison
omit =
    tests/*
    docs/*

[coverage:paths]
source =
    skip_thoughts

[coverage:report]
show_missing = True
exclude_lines =
    pragma: no cover
    raise NotImplementedError
    if __name__ == .__main__.:
    def __str__
    def __repr__

##########################
# Darglint Configuration #
##########################
[darglint]
docstring_style = sphinx
strictness = short
